--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@protonapp/dacast-components",
-  "version": "0.0.3",
+  "name": "adalo-dacast-components",
+  "version": "0.0.1",
   "description": "DaCast streaming components",
   "main": "index.js",
   "author": "Jeremy Blalock <jeremy@foundryplatform.io>",
